syntax = "proto3";

package demo;

option java_package = "com.proto.demo";
option java_multiple_files = true;

message DemoRequest {
    int32 number = 1;
}

message DemoResponse {
    string result = 1;
}

service DemoService {
    rpc Demo(DemoRequest) returns (DemoResponse) {};
}